--- a/conf/config.yaml
+++ b/conf/config.yaml
@@ -26,7 +26,12 @@ log:
     to_console: false
 
 env:
+    tool_dir: tools
+    apktool_name: apktool_2.4.0.jar
     android_sdk_path:
     android_sdk_env: ANDROID_HOME
+    android_build_tool_version: 
+    android_build_tool_path:
+    
     
       
