--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,8 +9,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@douyinfe/semi-icons": "^2.51.0",
+    "@douyinfe/semi-illustrations": "^2.51.0",
+    "@douyinfe/semi-ui": "^2.51.0",
+    "mobx": "^6.12.0",
+    "mobx-react": "^9.1.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-terminal-ui": "^1.2.0",
+    "reset-css": "^5.0.2"
   },
   "devDependencies": {
     "@types/react": "^18.0.17",
