--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "@douyinfe/semi-illustrations": "^2.51.0",
     "@douyinfe/semi-ui": "^2.51.0",
     "mobx": "^6.12.0",
+    "mobx-persist-store": "^1.1.4",
     "mobx-react": "^9.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
