--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-terminal-ui": "^1.2.0",
+    "react-xml-viewer": "^2.0.1",
     "reset-css": "^5.0.2"
   },
   "devDependencies": {
