--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "mobx": "^6.12.0",
     "mobx-persist-store": "^1.1.4",
     "mobx-react": "^9.1.0",
+    "qrcode.react": "^3.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-terminal-ui": "^1.2.0",
